# Galaga

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
headers/: BarManager.hpp  EBOClass.hpp  Position2D.hpp  RectManagerClass.cpp  RectManagerClass.hpp  TextureUtil.hpp  VAOClass.hpp  VBOClass.hpp  Window.hpp  debug_manager.hpp  galaga_objects.hpp  game_objects.hpp  game_ui.hpp  opengl_buffers.hpp  path_developer.hpp  path_objects.hpp  shaderClass.hpp
src/: BarManager.cpp  EBOClass.cpp  TextureUtil.cpp  VAOClass.cpp  VBOClass.cpp  Window.cpp  config.h  debug_manager.cpp  galaga_objects.cpp  game_objects.cpp  game_ui.cpp  glad.c  main.cpp  path_developer.cpp  path_objects.cpp  shaderClass.cpp  stage_editor.cpp
src/shaders/: bar_frag.txt  bar_vert.txt  debug_colliders_frag.txt  debug_colliders_vert.txt  develop_path_frag.txt  develop_path_vert.txt  fragment.txt  path_curve_frag.txt  path_curve_vert.txt  path_points_frag.txt  path_points_vert.txt  vertex.txt
